{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 416,
  "lineage": "9dff71fa-bd39-da02-dc4e-5a3393323607",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:926664221711:instance/i-00fc1e0ae47f5699b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00fc1e0ae47f5699b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "miguel_aws_cloud_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0872c0833df08c99b",
            "private_dns": "ip-10-10-0-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.236",
            "public_ip": "54.152.132.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fcc98bb080086172",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da34cba0ad2a34c2",
            "tags": {
              "Name": "Terraform v13"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "Terraform v13",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e9873ffbfc86329"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:internet-gateway/igw-0e34f84dd35ca9973",
            "id": "igw-0e34f84dd35ca9973",
            "owner_id": "926664221711",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "igw vpc virginia",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "vpc_id": "vpc-06cc18398f387c847"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:route-table/rtb-00537fc87ab2929ef",
            "id": "rtb-00537fc87ab2929ef",
            "owner_id": "926664221711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e34f84dd35ca9973",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public custom route table (crt)"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "public custom route table (crt)",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cc18398f387c847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079570ab67db701ef",
            "route_table_id": "rtb-00537fc87ab2929ef",
            "subnet_id": "subnet-0da34cba0ad2a34c2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:security-group/sg-04e9873ffbfc86329",
            "description": "Allo SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e9873ffbfc86329",
            "ingress": [
              {
                "cidr_blocks": [
                  "186.103.60.89/32"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "926664221711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "allow_tls",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cc18398f387c847"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:subnet/subnet-0637de9c4521334d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637de9c4521334d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926664221711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Privada"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "Subnet Privada",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "vpc_id": "vpc-06cc18398f387c847"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:subnet/subnet-0da34cba0ad2a34c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da34cba0ad2a34c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "926664221711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet Pública"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "Subnet Pública",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "vpc_id": "vpc-06cc18398f387c847"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:vpc/vpc-06cc18398f387c847",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ed7ee05d1d19f5d9",
            "default_route_table_id": "rtb-0981aaf32a56d5d0c",
            "default_security_group_id": "sg-01fe9eb85ebdd6f70",
            "dhcp_options_id": "dopt-00858ee10d6fa1059",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cc18398f387c847",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0981aaf32a56d5d0c",
            "owner_id": "926664221711",
            "tags": {
              "Name": "VPC VIRGINIA v13"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "VPC VIRGINIA v13",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:security-group-rule/sgr-02951ef211c409529",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02951ef211c409529",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04e9873ffbfc86329",
            "security_group_rule_id": "sgr-02951ef211c409529",
            "tags": null,
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926664221711:security-group-rule/sgr-03b5bb5101e63ee0e",
            "cidr_ipv4": "186.103.60.89/32",
            "cidr_ipv6": null,
            "description": "SSH over Internet",
            "from_port": 22,
            "id": "sgr-03b5bb5101e63ee0e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04e9873ffbfc86329",
            "security_group_rule_id": "sgr-03b5bb5101e63ee0e",
            "tags": {
              "Name": "Public Instance SG"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.8.3",
              "Name": "Public Instance SG",
              "cloud": "AWS",
              "env": "develop",
              "owner": "Miguel"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    }
  ]
}